# OaklandU-Octagon

./: LICENSE  README.md
Documentation/ROS Resources/: kinectpcl  octgon sensor demo  pcl
Documentation/ROS Resources/Learning_ROS_for_Robotics_Programming_2nd_edition-hydro-devel/: README.md
Documentation/ROS Resources/OU ros/: 2017 Lecture Videos.txt  cpp_tutorial.txt  virtual_machine_download.txt
Documentation/ROS Resources/homework/: hector_example.launch
Documentation/ROS Resources/homework/gps_sim_project/: CMakeLists.txt
Documentation/ROS Resources/homework/gps_sim_project/rviz/: sim_project.rviz
Documentation/ROS Resources/homework/homework1/: assignment.txt  new_file.txt
Documentation/ROS Resources/homework/homework2/: CMakeLists.txt
Documentation/ROS Resources/homework/homework2/.kdev4/: homework2.kdev4
Documentation/ROS Resources/homework/homework2/src/: service_advertiser_node.cpp  service_client_node.cpp
Documentation/ROS Resources/homework/homework3/: CMakeLists.txt  package.xml
Documentation/ROS Resources/homework/homework3/launch/: homework3_ackermann.launch  homework3_diff.launch  homework3_mecanum.launch
Documentation/ROS Resources/homework/homework3/src/: ackermann.cpp  mecanum_drive.cpp
Documentation/ROS Resources/homework/homework4/: CMakeLists.txt  package.xml
Documentation/ROS Resources/homework/homework4/cfg/: Marker.cfg
Documentation/ROS Resources/homework/homework6/: package.xml
Documentation/ROS Resources/homework/homework6/launch/: homework6.launch
Documentation/Wiring/wiring schematic/: #auto_saved_files#  Octagon_Custom_Symbols.bak  Octagon_Custom_Symbols.kicad_sym  PYB30-U DC-DC converter.kicad_sym  RoboteQ_XDC2230.bak  RoboteQ_XDC2230.kicad_sym  Rotary_Encoder_5pin.kicad_sym  sym-lib-table  wiring schematic.kicad_prl  wiring schematic.kicad_pro  wiring schematic.kicad_sch  ~wiring schematic.kicad_sch.lck
devel/: .catkin
devel/include/gps_common/: GPSFix.h  GPSStatus.h
devel/include/roboteq_msgs/: Command.h  Feedback.h  Status.h
devel/include/rtcm_msgs/: Message.h
devel/include/ublox_msgs/: Ack.h  AidALM.h  AidEPH.h  AidHUI.h  CfgANT.h  CfgCFG.h  CfgDAT.h  CfgDGNSS.h  CfgGNSS.h  CfgGNSS_Block.h  CfgHNR.h  CfgINF.h  CfgINF_Block.h  CfgMSG.h  CfgNAV5.h  CfgNAVX5.h  CfgNMEA.h  CfgNMEA6.h  CfgNMEA7.h  CfgPRT.h  CfgRATE.h  CfgRST.h  CfgSBAS.h  CfgTMODE3.h  CfgUSB.h  EsfALG.h  EsfINS.h  EsfMEAS.h  EsfRAW.h  EsfRAW_Block.h  EsfSTATUS.h  EsfSTATUS_Sens.h  HnrPVT.h  Inf.h  MgaGAL.h  MonGNSS.h  MonHW.h  MonHW6.h  MonVER.h  MonVER_Extension.h  (+40 more)
devel/lib/gps_common/: utm_odometry_node  utm_odometry_node2  utm_odometry_to_navsatfix_node
devel/lib/gpstools/: gpstools_node
devel/lib/pkgconfig/: gps_common.pc  gpstools.pc  roboteq_driver.pc  roboteq_msgs.pc  rtcm_msgs.pc  run_prog.pc  ublox_gps.pc  ublox_msgs.pc  ublox_serialization.pc
devel/lib/roboteq_driver/: driver_node
devel/lib/run_prog/: controller_input  gps_only  main
devel/lib/ublox_gps/: ublox_logger
devel/share/gps_common/cmake/: gps_common-msg-extras.cmake  gps_common-msg-paths.cmake  gps_commonConfig.cmake
devel/share/gpstools/cmake/: gpstoolsConfig.cmake
devel/share/roboteq_driver/cmake/: roboteq_driverConfig.cmake
devel/share/roboteq_msgs/cmake/: roboteq_msgs-msg-paths.cmake  roboteq_msgsConfig.cmake
devel/share/rtcm_msgs/cmake/: rtcm_msgs-msg-extras.cmake  rtcm_msgs-msg-paths.cmake  rtcm_msgsConfig.cmake
devel/share/run_prog/cmake/: run_progConfig.cmake
devel/share/ublox_gps/cmake/: ublox_gpsConfig.cmake
devel/share/ublox_msgs/cmake/: ublox_msgs-msg-extras.cmake  ublox_msgs-msg-paths.cmake  ublox_msgsConfig.cmake
devel/share/ublox_serialization/cmake/: ublox_serializationConfig.cmake
docs/ROS Resources/OU ros/: linux_terminal_tutorial.txt
docs/ROS Resources/homework/gps_sim_project/: CHANGELOG.rst  gps_sim_project.kdev4  package.xml
docs/ROS Resources/homework/homework2/: homework2.kdev4  package.xml
docs/ROS Resources/homework/homework2/launch/: test_homework2.launch
docs/ROS Resources/homework/homework2/src/: pubsub_node.cpp
docs/ROS Resources/homework/homework2/srv/: StringCat.srv
docs/ROS Resources/homework/homework2/test/: term_color.h  test_homework2.cpp
docs/ROS Resources/homework/homework3/: .CMakeLists.txt.kate-swp  homework3.kdev4
docs/ROS Resources/homework/homework4/: homework4.kdev4
docs/ROS Resources/homework/homework6/: CHANGELOG.rst  CMakeLists.txt
docs/ROS Resources/homework/homework6/test/: test_homework6.cpp
docs/Wiring/wiring schematic/: Octagon_Custom_Symbols.kicad_sym  PYB30-U DC-DC converter.kicad_sym  RoboteQ_XDC2230.kicad_sym  Rotary_Encoder_5pin.kicad_sym  sym-lib-table
docs/octagon/: .~lock.Electrical_BOM.xlsx#  Electrical_BOM.xlsx
src/gps_umd/gps_common/: CMakeLists.txt
src/gps_umd/gps_common/launch/: fix_translator.launch  gps_nav.launch
src/gps_umd/gps_common/src/: utm_odometry_node.cpp  utm_odometry_node2.cpp
src/roboteq_driver/config/: channels.yaml  diff_controller_config.yaml  diff_drive_controller_urdf.yaml  gps_waypoints.yaml
src/roboteq_driver/launch/: controller_driver.launch
src/roboteq_driver/mbs/: script (copy).mbs  script.hex
src/roboteq_driver/src/: .channel.cpp.swn  .channel.cpp.swo  .channel.cpp.swp  .controller.cpp.swl  .controller.cpp.swm  .controller.cpp.swn  .controller.cpp.swo  .controller.cpp.swp  .driver.cpp.swo  .driver.cpp.swp  controller.cpp  driver.cpp
src/run_prog/: CMakeLists.txt
src/run_prog/config/: gps_checkpoints_loop.yaml  gps_checkpoints_short.yaml  gps_checkpoints_straight.yaml
src/run_prog/include/run_prog/: octagon_nav_goals.h
src/run_prog/launch/: drive_only.launch  gps_nav.launch  gps_only.launch  main.launch
src/run_prog/src/: .controller.cpp.swp  controller_input.cpp  gps_only.cpp  main.cpp
src/witmotion_ros/src/: .witmotion_ros.cpp.swp  .witmotion_ros_node.cpp.swp
(+35 files in other folders)
