<?xml version="1.0"?>
<package format="2">
  <name>homework4</name>
  <version>0.0.0</version>
  <description>The homework4 package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>