<?xml version="1.0"?>
<package format="2">
  <name>homework6</name>
  <version>1.0.0</version>
  <description>The homework6 package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <export>
  </export>
</package>
