<?xml version="1.0"?>
<package format="2">
  <name>homework2</name>
  <version>0.0.0</version>
  <description>The homework2 package</description>
  <maintainer email="abc@todo.todo">abc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>

</package>
